# russian-doom-dos

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  COMPILING.md  README.md  build_release_package.sh  build_toolchain_image.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: continuous-integration.yml  release-package.yml
audio/: CMakeLists.txt
cmake/: Utils.cmake  VersionFromGit.cmake  config.h.in
cmake/scripts/: UpdateRevision.cmake
dos32a-binder/: README.md
src/: CMakeLists.txt  d_main.c  dmx.c  i_main.c  m_misc.c  m_misc.h  r_bmaps.c  r_data.c  r_plane.c  r_segs.c  rd_lang.c  rd_lang.h  w_wad.c
src/wads/: CMakeLists.txt
ultrasnd/: README.md
wads/: CMakeLists.txt
